Fix alignment of copyable text children

--- a/resources/css/components/_copyable-text.scss
+++ b/resources/css/components/_copyable-text.scss
@@ -7,6 +7,7 @@
   align-items: stretch;
 
   > * {
+    display: flex;
     border-radius: design.app-value('button-border-radius');
 
     @include design.if-ltr {
